FindRide page not done yet

--- a/RideShare/app/src/main/AndroidManifest.xml
+++ b/RideShare/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
 
         <activity
             android:name=".FindRideActivity"
-            android:label="@string/title_activity_find_ride"></activity>
+            android:label="@string/title_activity_find_ride"
+            android:windowSoftInputMode="adjustPan"> </activity>
         <activity android:name=".SignInActivity" />
         <activity
             android:name=".ProfilePageActivity"
