--- a/RideShare/app/build.gradle
+++ b/RideShare/app/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    implementation 'com.google.android.gms:play-services-maps:9.8.0'
+    implementation 'com.google.android.gms:play-services-location:9.8.0'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
