--- a/RideShare/app/src/main/AndroidManifest.xml
+++ b/RideShare/app/src/main/AndroidManifest.xml
@@ -19,10 +19,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyDhniP3WlREOpFNkEKsleRYvEmKGm11fAg" />
+
+        <activity
+            android:name=".GoogleMapsActivity"
+            android:label="@string/title_activity_google_maps"></activity>
+        <activity android:name=".CreateRideActivity" />
         <activity
             android:name=".FindRideActivity"
-
-            android:windowSoftInputMode="adjustPan"> </activity>
+            android:windowSoftInputMode="adjustPan" />
         <activity android:name=".SignInActivity" />
         <activity
             android:name=".ProfilePageActivity"
