--- a/RideShare/app/build.gradle
+++ b/RideShare/app/build.gradle
@@ -20,6 +20,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+    implementation 'com.facebook.android:account-kit-sdk:4.+'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
@@ -35,3 +37,4 @@ dependencies {
 }
 
 apply plugin: 'com.google.gms.google-services'
+
