--- a/RideShare/build.gradle
+++ b/RideShare/build.gradle
@@ -4,6 +4,9 @@ buildscript {
     repositories {
         google()
         jcenter()
+       mavenCentral();
+
+
         
     }
     dependencies {
@@ -26,4 +29,5 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+
 }
