fixed findRide/makeride btn

--- a/RideShare/app/src/main/AndroidManifest.xml
+++ b/RideShare/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".FindRide2"
+            android:label="@string/title_activity_find_ride2"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -43,9 +47,7 @@
         <activity
             android:name=".SignInActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".FindRideActivity">
-
-        </activity>
+        <activity android:name=".FindRideActivity"></activity>
         <activity
             android:name=".CreateAccountActivity"
             android:label="@string/title_activity_create_account"
