--- a/RideShare/app/src/main/AndroidManifest.xml
+++ b/RideShare/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SelectRideActivity"></activity>
+        <activity android:name=".SelectRideActivity" />
         <activity android:name=".SearchResultActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
